Entropy fix wraps uniqid() in random_id() in main.inc Courtesy SecurityMaverick.com FA Security intimation http://securitymaverick.com/php-uniqid-entropy-analysis-and-potentially-vulnerable-apps/front-accounting-code/ http://securitymaverick.com/tag/php/ Forum Post: http://frontaccounting.com/punbb/viewtopic.php?pid=27609#p27609 Additional fix to previous commit. https://github.com/FrontAccountingERP/FA/commit/8f7d6ecc5814cd339717606eda3dc7af2c431a8e Fixed problems with excel report generation. https://github.com/FrontAccountingERP/FA/commit/f6064e8aa959aa1f9c3f35de524a641019e853ab Additional fix to unique filenames. https://github.com/FrontAccountingERP/FA/commit/020b23ce2e531ee516882266e9f7feeb02578bbc Improved entropy for report file urls. https://github.com/FrontAccountingERP/FA/commit/c57a65eca46110b7e4a865dc2b007c1fd75838c3

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,17 @@
+2017-03-19 Janusz Dobrowolski
+Entropy fix wraps uniqid() in random_id() in main.inc
+M admin/attachments.php
+M includes/dashboard.inc
+M includes/main.inc
+M includes/ui/ui_controls.inc
+M reporting/includes/excel_report.inc
+M reporting/includes/pdf_report.inc
+M reporting/prn_redirect.php
+M reporting/rep102.php
+M reporting/rep202.php
+M reporting/rep706.php
+M reporting/rep707.php
+
 2017-03-18 Janusz Dobrowolski
 Fixed buggy prefix in sql query in 2.1 upgrade class. 
 M sql/alter2.1.php
