Bug 5198 @Bobby Lin: Attach Documents: constrained attachment file types to avoid XSS using javascript in SVG. https://github.com/FrontAccountingERP/FA/commit/231a58e6564fc927a2f38c9a45871df43da14420

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2020-09-27 Janusz Dobrowolski
+Bug 5198 @Bobby Lin: Attach Documents: constrained attachment file types to avoid XSS using javascript in SVG.
+M	 admin/attachments.php
+
 2020-09-26 Janusz Dobrowolski
 Bug 4964: Balance Sheet, P&L Drilldown invalid navigation via Back links fixed.
 M	 gl/inquiry/balance_sheet.php
